2008-06-08  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Antti.

        - fix https://bugs.webkit.org/show_bug.cgi?id=19299
          <rdar://problem/5969392>

        Generate the media MIME type list dynamically.

        * platform/graphics/win/QTMovieWin.cpp:
        (initializeSupportedTypes):



Canonical link: https://commits.webkit.org/26895@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34444 268f45cc-cd09-0410-ab3c-d52691b4dbfc